// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Token> Anchor story renders snapshot 1`] = `
<a
  className="rbt-token"
  href="#"
>
  This is a link token
</a>
`;

exports[`<Token> Disabled story renders snapshot 1`] = `
<div
  className="rbt-token rbt-token-disabled"
>
  This is a disabled token
</div>
`;

exports[`<Token> Interactive story renders snapshot 1`] = `
<div
  className="rbt-token rbt-token-removeable"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  This is an interactive token
  <button
    aria-label="Remove"
    className="close rbt-close rbt-token-remove-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
    <span
      className="sr-only visually-hidden"
    >
      Remove
    </span>
  </button>
</div>
`;

exports[`<Token> Static story renders snapshot 1`] = `
<div
  className="rbt-token"
>
  This is a static token
</div>
`;
